--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,5 @@ environment=UAT
 username=John
 name=Jane
 amazon_title=Amazon
+bluerental_url=https://www.bluerentalcars.com/
+orangeHRM_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
