--- a/configuration.properties
+++ b/configuration.properties
@@ -6,5 +6,24 @@ environment=UAT
 username=John
 name=Jane
 amazon_title=Amazon
-bluerental_url=https://www.bluerentalcars.com/
+
+# Credentials related to OrangeHRM Application
 orangeHRM_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+orangeHRM_username=Admin
+orangeHRM_password=admin123
+orangeHRM_title=OrangeHRM
+
+# Credentials related to techproeducation Application
+techpro_test_url=https://testcenter.techproeducation.com/index.php?page=form-authentication
+techpro_test_username=techproed
+techpro_test_password=SuperSecretPassword
+
+# Credentials related to Blue Rental Car Application
+bluerental_url=https://www.bluerentalcars.com/
+bluerental_email=jack1@gmail.com
+bluerental_password=12345
+bluerental_fake_email=fake@bluerentalcars.com
+bluerental_fake_customerpassword=fakepass
+bluerental_incomplete_email=fake@com
+
+# This file only stores MOCK DATA
